--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript">
-var socket = io();
 
+var socket = io();
+console.log('Socket',socket)
 var RTCPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection || window.msRTCPeerConnection;
 var RTCSessionDescription = window.RTCSessionDescription || window.mozRTCSessionDescription || window.webkitRTCSessionDescription || window.msRTCSessionDescription;
 navigator.getUserMedia = navigator.getUserMedia || navigator.mozGetUserMedia || navigator.webkitGetUserMedia || navigator.msGetUserMedia;
