--- a/client.html
+++ b/client.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-<h1> Broadcaster </h1>
+<h1> Client </h1>
 <div id="textRoom" style="display: none;">
   <div id="textRoomContent">
     <h3>Text Room</h3>
