--- a/client.html
+++ b/client.html
@@ -58,7 +58,7 @@ function getLocalStream() {
 }
 
 function join(roomID) {
-  socket.emit('join', roomID, true, function(socketIds){
+  socket.emit('join', roomID, false, function(socketIds){
     console.log('join', socketIds);
     for (var i in socketIds) {
       var socketId = socketIds[i];
