Fix event roomList

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script type="text/javascript">
 
 var socket = io('https://webrtc-svr.herokuapp.com/');
+// var socket = io('http://localhost:4443/');
 
 var RTCPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection || window.msRTCPeerConnection;
 var RTCSessionDescription = window.RTCSessionDescription || window.mozRTCSessionDescription || window.webkitRTCSessionDescription || window.msRTCSessionDescription;
