--- a/client.html
+++ b/client.html
@@ -29,18 +29,7 @@ var RTCPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection 
 var RTCSessionDescription = window.RTCSessionDescription || window.mozRTCSessionDescription || window.webkitRTCSessionDescription || window.msRTCSessionDescription;
 navigator.getUserMedia = navigator.getUserMedia || navigator.mozGetUserMedia || navigator.webkitGetUserMedia || navigator.msGetUserMedia;
 
-var twilioIceServers = [
-     { url: 'stun:global.stun.twilio.com:3478?transport=udp' }
-     // { url: 'turn:global.turn.twilio.com:3478?transport=udp',
-     //   username: 'ea757ad2c42b932c7f2abe480295e7eb039dc2b13b78c86bc412818ed51e5eea',
-     //   credential: 'MPnnojPRoPDI+B3kLONGF9P440Lb8NkrTq+FxxJBVro=' },
-     // { url: 'turn:global.turn.twilio.com:3478?transport=tcp',
-     //   username: 'ea757ad2c42b932c7f2abe480295e7eb039dc2b13b78c86bc412818ed51e5eea',
-     //   credential: 'MPnnojPRoPDI+B3kLONGF9P440Lb8NkrTq+FxxJBVro=' },
-     // { url: 'turn:global.turn.twilio.com:443?transport=tcp',
-     //   username: 'ea757ad2c42b932c7f2abe480295e7eb039dc2b13b78c86bc412818ed51e5eea',
-     //   credential: 'MPnnojPRoPDI+B3kLONGF9P440Lb8NkrTq+FxxJBVro=' } 
-];
+var twilioIceServers = [{ url: 'stun:global.stun.twilio.com:3478?transport=udp' } ];
 var configuration = {"iceServers": [{"url": "stun:stun.l.google.com:19302"}]};
 // configuration.iceServers = twilioIceServers;
 
@@ -181,9 +170,7 @@ function leave(socketId) {
   if (video) video.remove();
 }
 
-socket.on('roomlist', function(roomList){
-  console.log('Roomlist', roomList)
-})
+
 
 socket.on('exchange', function(data){
   exchange(data);
